--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/Template_Default.Template_Default
+GameDefaultMap=/Game/Map/Testing.Testing
 GlobalDefaultGameMode=/Game/Core/GM_PointAndClickFGameMode.GM_PointAndClickFGameMode_C
+EditorStartupMap=/Game/Map/Testing.Testing
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
