--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,9 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Map/Testing.Testing
+GameDefaultMap=/Game/Map/menu.menu
 GlobalDefaultGameMode=/Game/Core/GM_PointAndClickFGameMode.GM_PointAndClickFGameMode_C
-EditorStartupMap=/Game/Map/Testing.Testing
+EditorStartupMap=/Game/Map/house.house
 GameInstanceClass=/Game/Core/PointAndClick_GameInstance.PointAndClick_GameInstance_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
